# DiscrimAlign

./: .gitignore  Accuracy of learning on protein sequences.ipynb  DNA_Simulations_Dave.ipynb  DNA_Simulations_Dave_Simple.ipynb  README.md  RNA_simulated_general_scheme.ipynb  RNA_simulated_simple_scheme.ipynb  Simulation experiments.ipynb  pyproject.toml  run_mirna_auprc_table.py  run_mirna_auprc_table.sh
case_study_for_mirna/: README.md  __init__.py  case_study_mirna.py  import_mirbench_datasets.py  modeling.py  outputs.py  run_mirna_auprc_table.py  scoring.py
case_study_for_mirna/trained_models/: README.md  hejret_best_model.pkl  manakov_best_model.pkl
outputs/simulation_experiments/: README.txt  simulation_summary.json
scripts/: simulation_experiments_notebook.py
src/: __init__.py  discrimalign.py  estimalign.py  logit_link.py  optimization.py
src/estimalign/: cli.py  logit_link.py  optimization.py  simulation_config.py  simulation_dataset.py  simulation_experiments.py  simulation_metrics.py  simulation_model_experiments.py  simulation_outputs.py  simulation_plots.py
