[project]
name = "estimalign"
version = "0.1.0"
description = "Simulation experiment workflows for EstimAlign"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "biopython",
]

[project.scripts]
estimalign = "estimalign.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "jupyter",
    "nbconvert",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estimalign"]