[project]
name = "estimalign"
version = "0.1.0"
description = "Estimating alignment parameters from labelled biological sequence pairs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "biopython>=1.86",
    "ipykernel>=6.29.0",
    "joblib>=1.4.2",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.9.2",
    "mirbench",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "scipy>=1.12.0",
    "threadpoolctl>=3.6.0",
]

[tool.uv]
package = false
